--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    
+
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="content.css">
     <link rel="stylesheet" href="content-responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Borel&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
             <div class="fixed-head">
                 <div class="left-head">
-                    <img class="profile-picture" src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjhlM2J4Y2E4ZHU4NXVvanA1djRnc2U2Y2JmeDd3ZWozZHhqdThvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eSwGh3YK54JKU/giphy.gif" alt="">
-                    <div class="name">Ikhmal Hanif</div>    
+                    <img class="profile-picture"
+                        src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjhlM2J4Y2E4ZHU4NXVvanA1djRnc2U2Y2JmeDd3ZWozZHhqdThvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eSwGh3YK54JKU/giphy.gif"
+                        alt="">
+                    <div class="name">IKHMAL HANIF</div>
                 </div>
                 <ul class="navigation-link">
                     <li>Home</li>
@@ -53,4 +59,5 @@
         <div class="reviews">Reviews from my Teachers</div>
     </div>
 </body>
+
 </html>
