--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img class="profile-picture"
                         src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjhlM2J4Y2E4ZHU4NXVvanA1djRnc2U2Y2JmeDd3ZWozZHhqdThvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eSwGh3YK54JKU/giphy.gif"
                         alt="">
-                    <div class="name">IKHMAL HANIF</div>
+                    <div class="name">IKHMAL HANIF BIN SOIMIN</div>
                 </div>
                 <ul class="navigation-link">
                     <li>Home</li>
