--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Ikhmal Hanif - Frontend Developer Portfolio</title>
+    <meta name="description"
+        content="Frontend Developer specializing in modern web technologies - Portfolio of Ikhmal Hanif Bin Soimin">
 
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="content.css">
@@ -19,12 +21,12 @@
 
 <body>
     <div class="container">
-        <div class="header">
-            <div class="fixed-head">
+        <header class="header">
+            <nav class="fixed-head">
                 <div class="left-head">
                     <img class="profile-picture"
                         src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjhlM2J4Y2E4ZHU4NXVvanA1djRnc2U2Y2JmeDd3ZWozZHhqdThvMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eSwGh3YK54JKU/giphy.gif"
-                        alt="">
+                        alt="Ikhmal Hanif Profile Picture">
                     <div class="name">IKHMAL HANIF BIN SOIMIN</div>
                 </div>
                 <ul class="navigation-link">
@@ -33,30 +35,48 @@
                     <li>Articles</li>
                     <li>Contact</li>
                 </ul>
-            </div>
+            </nav>
             <div class="middle-head">
-                <div class="mid-title">Frontend Developer</div>
-                <div class="mid-subs">html only with proper layout, no styling</div>
+                <h1 class="mid-title">Frontend Developer</h1>
+                <p class="mid-subs">Passionate about creating beautiful, responsive, and user-friendly web experiences
+                    with modern technologies</p>
             </div>
-        </div>
-        <div class="project">
+        </header>
+
+        <section class="project">
             <div class="project-container">
                 <div class="project-head">
-                    <div>Projects</div>
+                    <h2>Featured Projects</h2>
                 </div>
                 <div class="project-body">
-                    <div class="p-1">HTML Only Portfolio</div>
-                    <div class="p-1">Calculator</div>
-                    <div class="p-1">Quiz App</div>
-                    <div class="p-1">Countdown Timer</div>
-                    <div class="p-1">Product Upcoming Page</div>
+                    <div class="p-1">📄 HTML Only Portfolio</div>
+                    <div class="p-1">🧮 Interactive Calculator</div>
+                    <div class="p-1">🎯 Dynamic Quiz App</div>
+                    <div class="p-1">⏰ Countdown Timer</div>
+                    <div class="p-1">🚀 Product Launch Page</div>
                 </div>
             </div>
-        </div>
-        <div class="work-exp">Work Experience</div>
-        <div class="opensc-work">openSource Work</div>
-        <div class="education">Education</div>
-        <div class="reviews">Reviews from my Teachers</div>
+        </section>
+
+        <section class="work-exp">
+            <h3>💼 Work Experience</h3>
+            <p>Professional Development Journey</p>
+        </section>
+
+        <section class="opensc-work">
+            <h3>🌐 Open Source</h3>
+            <p>Contributing to the Community</p>
+        </section>
+
+        <section class="education">
+            <h3>🎓 Education</h3>
+            <p>Academic Background</p>
+        </section>
+
+        <section class="reviews">
+            <h3>⭐ Testimonials</h3>
+            <p>What Teachers & Mentors Say</p>
+        </section>
     </div>
 </body>
 
